--- a/lab02/.vscode/settings.json
+++ b/lab02/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "C:\\Users\\naufa\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\naufa\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
+    "extensions.ignoreRecommendations": true,
+    "files.autoSave": "off",
+    "typescript.tsc.autoDetect": "off",
+    "npm.autoDetect": "off",
+    "debug.allowBreakpointsEverywhere": true,
+    "html.autoClosingTags": false
 }
